fix: Don't display separator and tralingBreak in summary (#4039)

--- a/app/assets/css/prosemirror.css
+++ b/app/assets/css/prosemirror.css
@@ -293,3 +293,8 @@
   background-color: var(--color-green-800);
   color: white;
 }
+
+.rich-text-summary .ProseMirror-trailingBreak,
+.rich-text-summary .ProseMirror-separator {
+  display: none !important;
+}
